--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@darshan-gohel/button-babe",
+  "name": "button-babe",
   "version": "1.0.0",
   "description": "A sleek, stylish, and customizable React button component for all your clickable needs.",
   "keywords": [
